[workspace]
members = ["lib", "apps/*"]
resolver = "3"

[workspace.package]
authors = ["Jack Foltz <jack@foltz.io>"]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/foltik/ravy"
readme = "README.md"


[workspace.dependencies]
lib = { path = "./lib" }

argh = "0.1"
syn = "2"
quote = "1"

[workspace.dependencies.bevy]
version = "0.16"
default-features = false
features = [
    "bevy_log",
    "bevy_winit",
    "bevy_gltf",
    "bevy_ui",
    "default_font",
    "animation",
    "tonemapping_luts",
    "jpeg",
    "png",
    "dynamic_linking",
    "file_watcher",
    "multi_threaded",
    "std",
]
