[workspace]
members = ["lib", "apps/*"]
resolver = "3"

[workspace.package]
authors = ["Jack Foltz <jack@foltz.io>"]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/foltik/ravy"
readme = "README.md"


[workspace.dependencies]
lib = { path = "./lib" }

argh = "0.1"
anyhow = "1"
syn = "2"
quote = "1"

midir = "0.10"
rosc = "0.5"
cpal = "0.16"
rtrb = "0.3"
sacn = { git = "https://github.com/RustLight/sacn" }
rand = "0.8"
itertools = "0.14"

bevy_egui = "0.36"
bevy-inspector-egui = "0.33"
egui_dock = "0.17"

[workspace.dependencies.bevy]
version = "0.16"
default-features = false
features = [
    "bevy_log",
    "bevy_winit",
    "bevy_gltf",
    "bevy_ui",
    "bevy_picking",
    "default_font",
    "animation",
    "tonemapping_luts",
    "jpeg",
    "png",
    "dynamic_linking",
    "file_watcher",
    "multi_threaded",
    "std",
]
