[package]
name = "lib"
version.workspace = true
edition.workspace = true


[dependencies]
bevy.workspace = true
bevy_egui.workspace = true
bevy-inspector-egui.workspace = true
egui_dock.workspace = true
egui_plot.workspace = true
anyhow.workspace = true
rand.workspace = true
midir.workspace = true
rosc.workspace = true
sacn.workspace = true
cpal.workspace = true
rtrb.workspace = true
